Initial client cleanup. Introduced users and haikus services. Added todo comments. Removed login. Authorization to prompt user isntead of caching cookies.

--- a/HaikuRatingSystem/HaikuRatingSystem.Client/views/partials/home/home.html
+++ b/HaikuRatingSystem/HaikuRatingSystem.Client/views/partials/home/home.html
@@ -1,3 +1,7 @@
 ﻿<div class="container">
-    {{vm.stats.trips}}
+    <div ng-repeat="user in vm.users"> 
+        Username: {{user.UserName}} <br />
+        Rating: {{user.Rating}} <br />
+        <!-- TODO: Add haikus or just hoiukus count -->
+    </div>
 </div>
