--- a/HaikuRatingSystem/HaikuRatingSystem.Client/views/partials/users/users.html
+++ b/HaikuRatingSystem/HaikuRatingSystem.Client/views/partials/users/users.html
@@ -1,6 +1,6 @@
 ﻿<div class="container">
     <h2 class="text-center">
-        Haikus
+        Users
     </h2>
 
     <div class="row">
@@ -11,7 +11,7 @@
                 </div>
                 <div class="text-center">
                     <select class="form-control" required="required" ng-init="vm.request.sortby='date'" ng-model="vm.request.sortby" id="sort">
-                        <option value="date">Date</option>
+                        <option value="date">Username</option>
                         <option value="rating">Rating</option>
                     </select>
                 </div>
@@ -61,17 +61,17 @@
     <div class="row">
         <div class="col-md-3">
             <div class="col-md-6">
-                <button class="btn btn-primary pull-right" ng-click="vm.filterHaikus()">Filter</button>
+                <button class="btn btn-primary pull-right" ng-click="vm.filterUsers()">Filter</button>
             </div>
         </div>
     </div>
 
     <br />
 
-    <div ng-show="vm.haikus && vm.haikus.length > 0">
-        <div all-haikus />
+    <div ng-show="vm.users && vm.users.length > 0">
+        <div all-users/>
     </div>
-    <div ng-hide="vm.haikus && vm.haikus.length > 0">
+    <div ng-hide="vm.users && vm.users.length > 0">
         <h2 class="text-center">No results!</h2>
     </div>
 </div>
