User registration implemented

--- a/HaikuRatingSystem/HaikuRatingSystem.Client/views/directives/all-users-directive.html
+++ b/HaikuRatingSystem/HaikuRatingSystem.Client/views/directives/all-users-directive.html
@@ -12,7 +12,7 @@
     </tr>
     <tr ng-repeat="user in vm.users" ng-class-even="'even-class'" ng-class-odd="'odd-class'">
         <td class="text-center">
-            <a href="users/{{user.UserName}}">{{user.UserName}}</a>
+            <a href="users/{{user.Username}}">{{user.Username}}</a>
         </td>
         <td class="text-center">
             {{user.Rating}}
