--- a/HaikuRatingSystem/HaikuRatingSystem.Client/views/partials/identity/register.html
+++ b/HaikuRatingSystem/HaikuRatingSystem.Client/views/partials/identity/register.html
@@ -2,29 +2,22 @@
     <div class="well">
         <form name="signUpForm" class="form-horizontal">
             <fieldset>
-                <legend>Create New User</legend>
+                <legend>Register</legend>
                 <div class="form-group">
-                    <label for="email" class="col-md-2 control-label">E-mail</label>
+                    <label for="username" class="col-md-2 control-label">Username</label>
                     <div class="col-md-10">
-                        <input id="email" type="text" placeholder="E-mail" ng-model="user.email" required="required" class="form-control"/>
+                        <input id="username" type="text" placeholder="Username" ng-model="user.username" required="required" class="form-control"/>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="password" class="col-md-2 control-label">Password</label>
+                    <label for="password" class="col-md-2 control-label">Publish code</label>
                     <div class="col-md-10">
-                        <input id="password" type="password" placeholder="Password" ng-model="user.password" required="required" class="form-control"/>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="confirmation" class="col-md-2 control-label">Confirm Password</label>
-                    <div class="col-md-10">
-                        <input id="confirmation" type="password" placeholder="Username" ng-model="user.confirmPassword" required="required" class="form-control"/>
+                        <input id="password" type="password" placeholder="Password" ng-model="user.publishCode" required="required" class="form-control"/>
                     </div>
                 </div>
                 <div class="pull-right">
-                    <button ng-click="signup(user)" ng-disabled="signUpForm.$invalid" class="btn btn-primary">
-                        Create
+                    <button ng-click="vm.register(user)" ng-disabled="signUpForm.$invalid" class="btn btn-primary">
+                        Register
                     </button>
                 </div>
             </fieldset>
