Publish haikus implemented.

--- a/HaikuRatingSystem/HaikuRatingSystem.Client/views/partials/identity/register.html
+++ b/HaikuRatingSystem/HaikuRatingSystem.Client/views/partials/identity/register.html
@@ -6,13 +6,13 @@
                 <div class="form-group">
                     <label for="username" class="col-md-2 control-label">Username</label>
                     <div class="col-md-10">
-                        <input id="username" type="text" placeholder="Username" ng-model="user.username" required="required" class="form-control"/>
+                        <input id="username" type="text" placeholder="Username" ng-model="user.Username" required="required" class="form-control"/>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password" class="col-md-2 control-label">Publish code</label>
                     <div class="col-md-10">
-                        <input id="password" type="password" placeholder="Password" ng-model="user.publishCode" required="required" class="form-control"/>
+                        <input id="password" type="password" placeholder="Password" ng-model="user.PublishCode" required="required" class="form-control"/>
                     </div>
                 </div>
                 <div class="pull-right">
