--- a/HaikuRatingSystem/HaikuRatingSystem.Client/views/partials/haikus/haikuDetails.html
+++ b/HaikuRatingSystem/HaikuRatingSystem.Client/views/partials/haikus/haikuDetails.html
@@ -31,6 +31,7 @@
             <button ng-click="vm.rateHaiku()" class="btn btn-success">Rate</button>
         </div>
         <div class="form-group">
+            <button ng-click="vm.reportHaiku()" class="btn btn-danger">Report</button>
             <button ng-click="vm.deleteHaiku()" class="btn btn-danger">Delete</button>
         </div>
     </div>
